--- a/example/src/index.css
+++ b/example/src/index.css
@@ -85,6 +85,19 @@ input {
   min-width: 300px;
 }
 
+select {
+  border-radius: 8px;
+  border: 1px solid #646cff;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: transparent;
+  color: inherit;
+  transition: border-color 0.25s;
+  min-width: 340px;
+}
+
 .column {
   display: flex;
   flex-direction: column;
