--- a/example/src/index.css
+++ b/example/src/index.css
@@ -70,6 +70,7 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding: 12px;
 }
 
 input {
@@ -82,7 +83,7 @@ input {
   background-color: transparent;
   color: inherit;
   transition: border-color 0.25s;
-  min-width: 300px;
+  flex-grow: 1;
 }
 
 select {
@@ -95,7 +96,7 @@ select {
   background-color: transparent;
   color: inherit;
   transition: border-color 0.25s;
-  min-width: 340px;
+  flex-grow: 1;
 }
 
 .column {
@@ -107,6 +108,7 @@ select {
 .row {
   display: flex;
   gap: 1em;
+  flex-wrap: wrap;
 }
 
 .success {
