--- a/example/src/index.css
+++ b/example/src/index.css
@@ -29,8 +29,8 @@ body {
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  font-size: 2.8em;
+  line-height: 1.5;
 }
 
 button {
@@ -71,7 +71,7 @@ main {
   align-items: center;
   justify-content: center;
   padding: 12px;
-  max-width: 600px;
+  max-width: 640px;
   margin: 0 auto;
 }
 
@@ -105,6 +105,7 @@ select {
   display: flex;
   flex-direction: column;
   gap: 1em;
+  width: 100%;
 }
 
 .row {
